# noesis-core

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: constitution.yaml  dream.yaml  ingestion.yaml  models.yaml  otel-collector.yaml  prometheus.yml
data/holdout/: ai_engineering_bench.jsonl
docs/: env.template.md
noesis/: __init__.py  cli.py
noesis/api/: __init__.py  server.py
noesis/clients/: __init__.py  embedder.py  llm.py  reranker.py  sparse.py
noesis/core/: __init__.py  compute_router.py  config.py  model_registry.py  orchestrator.py
noesis/dream/: __init__.py  cycle.py  eval.py  ewc.py  filter.py  synthesis.py  train.py  train_runner.py
noesis/governance/: __init__.py  audit_log.py
noesis/interp/: __init__.py  refusal_monitor.py  sae.py  steering.py
noesis/knowledge/: __init__.py  chunking.py  retrieval.py  vector_store.py
noesis/knowledge/ingestion/: __init__.py  arxiv.py  base.py  books.py  github.py  hackernews.py  huggingface.py  pdf_fetcher.py  pipeline.py  reddit.py  rss.py  workspace.py  youtube.py
noesis/memory/: __init__.py  consolidation.py  episodic.py  procedural.py  semantic.py  working.py
noesis/reasoning/: __init__.py  citations.py  constitutional.py  hyde.py  hyperquestion.py  react.py  reflexion.py  tools.py  tot.py
noesis/sandbox/: __init__.py  executor.py  hypothesis.py  jupyter.py
noesis/tools/: __init__.py  registry.py  synthesis.py
scripts/: benchmark_retrieval.py  dream_cycle.py  eval_harness.py  ingest_daily.py  ingest_example.py  ingest_workspace.py  postgres-init.sql  setup.sh
tests/: test_chunking.py  test_citations.py  test_clients.py  test_config.py  test_hyde.py  test_orchestrator.py  test_pdf_fetcher.py  test_priority_weighting.py  test_reasoning.py  test_retrieval.py  test_slot_resolver.py
