[project]
name = "noesis"
version = "0.1.0"
description = "Self-improving autonomous AI engineering specialist"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "supernovyl" }]

dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "loguru>=0.7",
    "tenacity>=8.5",
    "anyio>=4.4",
    "httpx>=0.27",
    "orjson>=3.10",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "websockets>=12.0",
    # Storage
    "qdrant-client>=1.10",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Inference clients
    "openai>=1.40",                          # vllm OpenAI-compatible client
    "transformers>=4.45",
    "tokenizers>=0.20",
    "sentencepiece>=0.2",
    "accelerate>=1.0",
    "torch>=2.4",
    # Retrieval
    "sentence-transformers>=3.1",
    "FlagEmbedding>=1.3",
    "rank-bm25>=0.2.2",
    "pyserini>=0.42",                        # BM25 + SPLADE indexing
    # Fine-tuning (optional via extras)
    # "unsloth"                              # see [project.optional-dependencies]
    # Ingestion
    "arxiv>=2.1",
    "praw>=7.7",
    "feedparser>=6.0",
    "youtube-transcript-api>=0.6",
    "pymupdf>=1.24",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "crawl4ai>=0.3",
    "trafilatura>=1.12",
    # Sandbox
    "docker>=7.1",
    "jupyter-client>=8.6",
    "nbformat>=5.10",
    # Interpretability
    # "transformer-lens",                    # see [project.optional-dependencies] - heavy
    # Orchestration
    "dspy-ai>=2.5",
    # Observability
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
train = [
    "unsloth",                                # 2-5x faster LoRA
    "trl>=0.11",                              # DPO/PPO/GRPO
    "peft>=0.13",
    "bitsandbytes>=0.44",
    "datasets>=3.0",
    "wandb>=0.18",
]
interp = [
    "transformer-lens>=2.4",
    "sae-lens>=4.0",
    "nnsight>=0.3",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "ipython>=8.27",
]

[project.scripts]
noesis = "noesis.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["noesis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RET"]
ignore = [
    "E501",                                   # line length — handled by formatter
    "SIM117",                                 # nested `async with await ...` reads clearer un-combined
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
